--- a/src/vtr_testing_radar/package.xml
+++ b/src/vtr_testing_radar/package.xml
@@ -4,7 +4,7 @@
   <name>vtr_testing_radar</name>
   <version>0.0.0</version>
   <description>The vtr_testing_radar package.</description>
-  <maintainer email="cheney.wu@mail.utoronto.ca">yuchen</maintainer>
+  <maintainer email="daniil.lisus@mail.utoronto.ca">Daniil</maintainer>
   <license>BSD</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
