--- a/src/vtr_testing_aeva/config/aeva_boreas.yaml
+++ b/src/vtr_testing_aeva/config/aeva_boreas.yaml
@@ -16,6 +16,7 @@
         # pipeline specific
         # "lidar.pipeline",
         # "lidar.aeva_converter",
+        # "lidar.preprocessing",
         # "lidar.preprocessing_doppler",
         # "lidar.odometry_icp",
         # "lidar.odometry_doppler",
@@ -64,6 +65,7 @@
           # preprocessing thread modules
           "conversion",
           "filtering",
+          "doppler_filtering",
         ]
 
       odometry: [
@@ -93,16 +95,12 @@
         visualize: false
 
       filtering:
-        # if using odometry_icp, change type below to `lidar.preprocessing`
-        # if using odometry_doppler, change type below to `lidar.preprocessing_doppler`
-        type: lidar.preprocessing_doppler
-        # type: lidar.preprocessing
+        type: lidar.preprocessing
         num_threads: 10
 
-        # lidar.preprocessing parameters
         crop_range: 150.0
         # 
-        vertical_angle_res: 0.007561638984 # vertical angle resolution in radians
+        vertical_angle_res: 0.007561638984 # vertical angle resolution in radians (0.12 deg w/ 30 vertical FOV)
         polar_r_scale: 2.0 # 1.0 # polar_r_scale x vertical_angle_res = nearest neighbor search radius for normal computation
         r_scale: 4.0 # scale down point range by this value after taking log, whatever works
         h_scale: 4.0 # scale down yaw(phi) by this value so that vertical resolution ~= horizontal resolution
@@ -113,14 +111,19 @@
         num_sample1: 5000 # max number of sample after filtering based on planarity
         min_norm_score1: 0.95 # min planarity score
         #
-        num_sample2: 10000 # max number of sample after filtering based on planarity
+        num_sample2: 5000 # max number of sample after filtering based on planarity
         min_norm_score2: 0.0 # 0.2 is when the incident angle 5/12 * pi
         min_normal_estimate_dist: 2.0 # minimum distance to estimate normal in meters
         max_normal_estimate_angle: 0.42 # must <1/2, this value will be timed by M_PI
         #
-        cluster_num_sample: 10000 # maxnumber of sample after removing isolated points
+        cluster_num_sample: 5000 # maxnumber of sample after removing isolated points
 
-        # lidar.preprocessing_doppler parameters
+        visualize: false
+
+      doppler_filtering:
+        type: lidar.preprocessing_doppler
+        num_threads: 10
+
         # # aeriesI
         # azimuth_res: 0.00349066         # vertical angle resolution in radians
         # azimuth_start: -0.872665        # -50 deg in rad
@@ -181,7 +184,7 @@
         initial_max_iter: 6
         initial_max_pairing_dist: 3.0
         initial_max_planar_dist: 1.0
-        refined_max_iter: 30
+        refined_max_iter: 50
         refined_max_pairing_dist: 1.0
         refined_max_planar_dist: 0.3
         averaging_num_steps: 3
@@ -196,9 +199,9 @@
 
       doppler:
         type: lidar.odometry_doppler
-        # continuous time estimation
+
+        #
         use_trajectory_estimation: true
-        traj_num_extra_states: 0
         traj_lock_prev_pose: false
         traj_lock_prev_vel: false
         traj_qc_diag: [1.0, 0.001, 0.001, 0.001, 0.001, 1.0]
@@ -213,20 +216,10 @@
         ransac_min_range: 5.0
         integration_steps: 100
         zero_vel_tol: 0.03
-
-        min_dist_lidar_center: 5.0 
-        max_dist_lidar_center: 150.0 
-
+        #
         P0inv: [1e4, 1e4, 1e4, 1e6, 1e6, 1e6]
-
-        # # aeva_boreas
-        Qkinv: [124.097194, 852.430330017, 448.704299478, 11128.19639192, 12130.02908934, 11316.9459369]
-        Qzinv: [0.0, 0.0, 0.0, 14274.3037743, 11121.0286591, 0.0]
-
-        # threshold
-        min_matched_ratio: 0.0
-
-        visualize: false
+        Qkinv: [124.097194, 852.430330017, 448.704299478, 1128.19639192, 1230.02908934, 11316.9459369]
+        Qzinv: [0.0, 100.0, 100.0, 33271.2755284, 20032.1558168, 0.0]
 
       mapping:
         type: lidar.odometry_map_maintenance_v2
@@ -262,7 +255,7 @@
       icp:
         type: lidar.localization_icp
 
-        use_pose_prior: true
+        use_pose_prior: false
 
         # ICP parameters
         num_threads: 10
@@ -270,7 +263,7 @@
         initial_max_iter: 6
         initial_max_pairing_dist: 5.0
         initial_max_planar_dist: 1.0
-        refined_max_iter: 30
+        refined_max_iter: 50
         refined_max_pairing_dist: 1.0
         refined_max_planar_dist: 0.3
         averaging_num_steps: 3
