--- a/src/vtr_testing_radar_lidar/config/boreas.yaml
+++ b/src/vtr_testing_radar_lidar/config/boreas.yaml
@@ -82,10 +82,7 @@
         type: radar.offline_converter
         cart_resolution: 0.2384 # m/pixel of BEV Cartesian radar image
         radar_resolution: 0.04381 #0.0596
-        range_offset: -0.31
-        minr: 2.0 # mininum detection distance
-        maxr: 80.0 # maximum detection distance
-        beta: 0.049 # Doppler correction factor (set to 0 to turn this off)
+        cartesian_maxr: 80.0 # maximum cartesian visualization distance
         # chirp_type:
       extraction:
         type: radar.pc_extractor
