--- a/src/vtr_testing_radar/config/boreas.yaml
+++ b/src/vtr_testing_radar/config/boreas.yaml
@@ -180,6 +180,7 @@
         visualize: true
 
     odometry:
+      start_frame: 0
       gyro:
         type: radar.odometry_gyro
         traj_qc_diag: [1.0, 0.0001, 0.0001, 0.0001, 0.0001, 0.01]
