--- a/src/vtr_testing_radar/config/boreas.yaml
+++ b/src/vtr_testing_radar/config/boreas.yaml
@@ -242,7 +242,8 @@
         min_matched_ratio: 0.75
         max_trans_vel_diff: 2.60 # 1000.0 (or some large number) to disable
         max_rot_vel_diff: 1.35 # 1000.0 (or some large number) to disable
-        max_transformation_diff: 1000.0 # 1000.0 (or some large number) to disable
+        max_trans_diff: 1000.0 # 1000.0 (or some large number) to disable
+        max_rot_diff: 1000.0 # 1000.0 (or some large number) to disable
 
         visualize: true
 
