--- a/src/vtr_testing_radar/config/boreas.yaml
+++ b/src/vtr_testing_radar/config/boreas.yaml
@@ -181,6 +181,7 @@
 
     odometry:
       start_frame: 0
+      end_frame: -1 # -1 means process all frames
       gyro:
         type: radar.odometry_gyro
         traj_qc_diag: [1.0, 0.0001, 0.0001, 0.0001, 0.0001, 0.01]
